@@ -8,7 +8,6 @@ import org.fms.training.service.RoleService;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,7 +19,7 @@ public class RoleServiceImpl implements RoleService {
         List<Role> roles = roleRepository.findAll();
         return roles.stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private RoleDTO convertToDTO(Role role) {
