@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,7 +23,7 @@ public class TechnicalGroupServiceImpl implements TechnicalGroupService {
         List<TechnicalGroup> technicalGroups = technicalGroupRepository.findAll();
         List<ListTechnicalGroupDTO> listTechnicalGroupDTOs = technicalGroups.stream()
                 .map(technicalGroupMapper::toListDTO)
-                .collect(Collectors.toList());
+                .toList();
 
         return Optional.of(listTechnicalGroupDTOs);
     }
